# Platalea

./: .gitignore  PRIVACY_POLICY.md  README.md  TODO  gradle.properties  settings.gradle.kts  调试笔记.md  调试说明.md
pc_tools/: .gitignore  CHANGES.md  README.md  board_client.py  bulletin_server.py  config.example.json  mdns_server.py  platalea-completion.sh  pyproject.toml  requirements.txt  send_message.py  test_agent_tools.py  test_ai_internal.py  test_board_attachment_client.py  test_board_client.py  test_broker_ipc.py  test_bulletin_board_access.py  test_bulletin_boardpack.py  test_bulletin_message_update.py  test_bulletin_roles.py  test_bulletin_server.py  test_config_import.py  test_discover_cmd.py  test_family_common.py  test_gpg_cmd.py  test_obfuscate.py  test_paths.py  test_power_cmd.py  test_service_cmd.py  test_service_control_macos.py  test_service_control_platforms.py
pc_tools/platalea/: __init__.py  board_attachment_client.py  board_client.py  bulletin_agent.py  bulletin_agent_status.py  bulletin_agent_tools.py  bulletin_mention.py  (+15 more)
pc_tools/platalea.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
server/: README.md  board_client.py  bulletin_agent.py  bulletin_agent_status.py  bulletin_agent_tools.py  bulletin_ai_internal.py  bulletin_attachment_store.py  bulletin_boardpack.py  bulletin_mention.py  bulletin_roles.py  bulletin_server.py  bulletin_store.py  config.example.json  family_common.py  generate_tls_materials.sh  lmserver-completion.sh  mdns_server.py  pyproject.toml  send_message.py  test_agent_tools.py  test_ai_internal.py  test_board_attachment_client.py  test_bulletin_board_access.py  test_bulletin_boardpack.py  test_bulletin_roles.py
(+162 files in other folders)
