[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "platalea"
description = "LocalManager PC tools: family bulletin board service, CLI, and file utilities"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "Kenny" }]
dynamic = ["version"]
dependencies = [
    "zeroconf>=0.147,<1",
]

[project.scripts]
platalea = "platalea.cli:main"
lmserver = "platalea.compat:main_lmserver"

[project.urls]
Homepage = "https://github.com/Kenneth-Lee-2025/local_manager"

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.setuptools.packages.find]
where = ["."]
include = ["platalea*"]

[tool.setuptools.package-data]
platalea = ["py.typed", "bundled_tls/*.pem"]

[tool.setuptools.data-files]
"share/platalea" = ["platalea-completion.sh"]
